--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     </head>
 
     <body>
+        <div id="status-bar"></div>
         <div id="deck"></div>
-        <div id="not-in-play"></div>
         <h1 id="opponent-score">0</h1>
         <div id="opponent-deck"></div>
         <img id="opponent-choice">
@@ -19,5 +19,9 @@
         <div id="your-deck"></div>
         <h1 id="your-score">0</h1>
         <div id="choices"></div>
+        <br>
+        <button id="discard-replace" disabled>Discard and Replace Hand</button>
+
+
     </body>
 </html>
